# rust-client

./: Cargo.toml  Config.toml  README.md
src/: channel.rs  controller.rs  main.rs  view.rs
src/controller/: connect.rs
src/view/: tui.rs
tests/: tests.rs  tui_tests.rs
