[package]
name = "irc"
version = "0.1.0"
authors = ["tsou"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irc="0.15.0"
futures="0.3.15"
thiserror="1.0.25"

[dependencies.async-std]
version = "1.9"
features = ["attributes"]

[dependencies.cursive]
version = "0.16.3"
features = ["crossterm-backend"]

[dependencies.tokio]
version="1.6.0"
features=["full"]
